Changelog
=========

This document describes changes between past releases. For information about
future releases, check `milestones`_ and :doc:`/about/vision`.


0.4 (unreleased)
----------------

- Nothing changed yet.


0.3 (2014-02-09)
----------------

Documentation review and development environment refactoring: let's try to
simplify usage and development of `hospital`.

- Feature #25: the Makefile in project's repository no longer creates a
  virtualenv. Developers setup the environment as they like, i.e. using
  virtualenv, virtualenvwrapper or whatever. Added documentation about the
  Makefile scope and usage.

- Feature #19: reviewed contributor guide, added branching policy.

- Feature #24: added note about project's status in documentation.

- Feature #21: reviewed API documentation.

- Bugfix #18: README can be rendered as HTML with `docutils`' ``rst2html.py``.
  Fixes PyPI information page.


0.2 (2013-12-27)
----------------

Documentation review, API refactoring, addition of some assertions.

- Feature #17: introduced ``assert_http_response`` assertion.

- Feature #16: introduced ``assert_supported_python_version`` assertion.

- Feature #15: exposed API at root of ``hospital`` package. Items not exposed
  in this root API may be moved without notice, whereas root API is tested and
  refactoring will be documented. 

- Feature #14: introduced ``healthcheck`` decorator. Deprecates former
  ``HealtCheck`` base class (not removed in this version).

- Feature #13: dropped support of Python 2.6

- Feature #12: introduced support of Python 3.3

- Feature #11: project has mailing-list pythonhospital@librelist.com

- Feature #10: project has IRC channel #python-hospital on freenode.

- Bugfix #9: Fixed examples in README.

- Feature #8: introduced ``assert_ping`` assertion.

- Feature #7: added tests around hospital's Python API.


0.1 (2013-05-11)
----------------

- Feature #6: added support for TravisCI continuous integration