@@ -1,0 +1,2 @@
+# -*- coding: utf-8 -*-
+"""Unit tests around ``hospital.assertions``."""
