@@ -8,7 +8,8 @@ future releases, check `milestones`_ and :doc:`/about/vision`.
 0.4 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Bugfix #31: when ``assert_http_response()`` fails, it provides comprehensive
+  message (was "AssertionError" without details about URL and reason).
 
 
 0.3 (2014-02-09)
